k8s/base/ingress.yaml
# =============================================================================
# BeeWAF — Ingress (Base)
# =============================================================================
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: beewaf-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "60"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "60"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - beewaf.dpc.com.tn
    secretName: beewaf-tls-secret
  rules:
  - host: beewaf.dpc.com.tn
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: beewaf-svc
            port:
              number: 80
